<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carlin.munisolidos.view.CreateCiudadanoActivity">

    <include layout="@layout/actionbar_toolbar"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createciudadano">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtDni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="8"
                    android:hint="@string/hint_dni"
                    >

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createciudadano">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nombres"
                    >

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createciudadano">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_apellidos"
                    >

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createciudadano">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtcorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_correo"
                    >

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createciudadano">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_UserName"
                    android:maxLength="8"
                    android:inputType="number"
                    >

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createciudadano">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_Contraseña"
                    android:inputType="textPassword"
                    android:maxLength="8"
                   >

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCrearCiudadano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text_btn_crearCiudadano"
                android:theme="@style/RaisedButtonDark"
                />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>