<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carlin.munisolidos.LoginActivity"
    android:background="@color/colorPrimary">


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:weightSum="1">

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="0.6">

                   <ImageView
                       android:id="@+id/logo"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true"
                       android:background="@drawable/logoabc"/>
               </RelativeLayout>


               <ScrollView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="0.4"
                   android:fillViewport="true">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="vertical"
                       android:padding="@dimen/padding_horizontal_login">

                       <android.support.design.widget.TextInputLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:theme="@style/EditTextWhite">

                           <android.support.design.widget.TextInputEditText
                               android:id="@+id/txtusuario"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:hint="@string/hint_UserName"
                               android:theme="@style/EditTextWhite">

                           </android.support.design.widget.TextInputEditText>

                       </android.support.design.widget.TextInputLayout>
                       <android.support.design.widget.TextInputLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:theme="@style/EditTextWhite">

                           <android.support.design.widget.TextInputEditText
                               android:id="@+id/txtcontrasenia"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:hint="@string/hint_Contraseña"
                               android:inputType="textPassword"
                               android:theme="@style/EditTextWhite">

                           </android.support.design.widget.TextInputEditText>

                       </android.support.design.widget.TextInputLayout>

                       <Button
                           android:id="@+id/btnLogin"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/Text_btn_login"
                           android:theme="@style/RaisedButtonDark"


                           />
                       <RelativeLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:gravity="center">

                           <TextView
                               android:id="@+id/NoTienesCuenta"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/no_tienes_cuenta"
                               android:textColor="@android:color/white"
                               android:textStyle="bold"
                               android:textSize="@dimen/textsize_notienecuenta"
                               />
                           <TextView
                               android:id="@+id/createCuenta"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/create_cuenta"
                               android:textColor="@android:color/white"
                               android:textStyle="bold"
                               android:textSize="@dimen/textsize_notienecuenta"
                               android:layout_toRightOf="@id/NoTienesCuenta"
                               android:onClick="goCreateCiudadano"/>

                       </RelativeLayout>
                   </LinearLayout>
               </ScrollView>



           </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
