<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carlin.munisolidos.view.fragment.ReportarFragment"
   >


    <include layout="@layout/actionbar_toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <ImageView
                    android:id="@+id/imgReporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/logoabc" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <TextView
                    android:id="@+id/txtFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fecha de Reporte : dd/mm/aa"
                    android:textColor="@color/editTextColorBlack"
                    android:textSize="@dimen/edittext_textsize_login" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtDescripcionTipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_Tiporesiduo"
                        android:theme="@style/EditTextBlack">

                    </android.support.design.widget.TextInputEditText>

                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/mensaje_id2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Latitud"
                    />

                <TextView
                    android:id="@+id/mensaje_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Longitud"

                   />

                    <Button
                        android:id="@+id/btnTomarFoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/btnMiUbicacion"
                        android:text="@string/Text_btn_tomaFoto"
                        android:theme="@style/RaisedButtonDark" />


                <Button
                    android:id="@+id/btnReportar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Text_btn_ReportarSolidos"
                    android:theme="@style/RaisedButtonDark"

                    />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>

